--- a/src/peak_ros/config/beccas.yaml
+++ b/src/peak_ros/config/beccas.yaml
@@ -1,7 +1,7 @@
 peak_address:    "10.1.1.2"
 peak_port:             1067
 
-acquisition_rate:        15
+acquisition_rate:        20
 digitisation_rate:      100 # 0, 10, 25, 50 or 100 (0 = use default)
 frame_id: "ltpa"
 
@@ -11,7 +11,7 @@ profile:              false     # Profiling output for PeakNodelet::takeMeasurem
 
 boundary_conditions:
 
-  n_focals:              63     # number of focal laws (num_elements - aperture + 1)
+  n_focals:              127     # number of focal laws (num_elements - aperture + 1)
   element_pitch:          0.5   # mm
   inter_element_spacing:  0.1   # mm
   element_width:         10.0   # mm
@@ -26,6 +26,7 @@ boundary_conditions:
   vel_couplant:        1500.0   # m/s Water
 
 #  vel_material:        5000.0   # m/s Steel
+  # vel_material:          5630.0  #m/s Nickel
   # vel_material:          6070.0   #m/s Titanium
   vel_material:         6420.0   # m/s Aluminium
   # vel_material:           1500.0   #m/s Water
@@ -33,22 +34,22 @@ boundary_conditions:
 
 
 tcg:
-  use_tcg:             true
+  use_tcg:              true
   # Amplify by tcg_n dB every tcg_l mm up to a maximum of tcg_limit normalised amplitude
-  amp_factor:             1.0   # dB
-  depth_factor:          25.0   # mm
+  amp_factor:            1.5   # dB
+  depth_factor:         105.0   # mm
   tcg_limit:              0.8
 
 gates:
-  gate_front_wall:        0.5  # 0 to 1
-  depth_to_skip:          6.0   # mm
-  gate_back_wall:         0.7   # 0 to 1
-  max_depth:             10.0   # mm
+  gate_front_wall:        0.77  # 0 to 1
+  depth_to_skip:          35.0   # mm
+  gate_back_wall:         0.6   # 0 to 1 amplitude = 10^(-X/20): Chose X(3-5dB) drop b/c frontwall needs to be stable
+  max_depth:             30.0   # mm
   zero_to_front_wall:  false     # Sets the gated B Scan to start at the detected frontwall
   show_front_wall:      true    # Show front wall in the gated B Scan
 
 reconstruction:
-  process_rate:          15 # Hz - Consider interplay between this and acquisition rates
+  process_rate:          20 # Hz - Consider interplay between this and acquisition rates
   use_tf:              true
   recon_frame_id: "base_link"
   live_publish:        false
